c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/extra_credit/bitwise_or_pointer.c
/* It's illegal to apply bitwise operations to pointers */
int main(void) {
    int *x = 0;
    int *y = 0;
    x | y;
    return 0;
}